1.X.X (2010-XX-XX)
   * An email adress can match multiple trac accounts, closes #218
     Author: Konstantin Ryabitsev <icon add mricon dot com>
 
1.6.0 (2010-8-10)
   * Fixed an Unicode error in strip_quotes
     Author: Bas van der Vlies

   * The attachment filename may not contain '\n' and '\r' characters.
     Reported by: Jean-Paul Duyx <jean-paul dot duyx at vancis dot nl>
     Fixed by; Bas van der Vlies

   * Applied a patch to support workflow for all transitions. It will
     also honour the permission model if set, closes #198
     an example how to use it:
	email2trac.conf:
        	[project]
		workflow_closed: reopen
		workflow_infoneeded: provideinfo

	trac.ini:
		[ticket-workflow]
		reopen = closed -> reopened 
		reopen.permissions = TICKET_CREATE 
		reopen.operations = del_resolution 
		
		provideinfo = infoneeded -> moreinfo
		provideinfo.permissions = TICKET_CREATE
		provideinfo.name = info provided

     Authors: kroseneg add schmidham dot net and Bas van der Vlies

   * The trac default value for resolution is fixed. The trac.ini value
     for this is skipped and this resolution settings is only allowed in
     email2trac.conf, closes #84

     Reported by: hju add jochenkuhl dot de
     Fixed by: Bas van der Vlies

   * Honor the trac permission model if set, Use
    TICKET_APPEND and TICKET_CHGPROP instead of TICKET_MODIFY.
    closes #214

    Reported by: Konstantin Ryabitsev <icon add mricon dot com>
    Fixed by: Bas van der Vlies
    
2010-07-23
    * logging of spam message was wrong. Fixed it, 
       - set.logger.info must be self.logger.info
    Author: Bas van der Vlies

    * logging of notification error was wrong. Fixed it, closes #212
       - set.logger.error must be self.logger.error
    Reported by:  adam dot lucke at srd-berlin dot de
    Author: Bas van der Vlies

    * Mail was lost when 'ticket_update' was disabled and a ticket
      reply was detected.
    Author: Bas van der Vlies
